--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <section id="section-c" class="grid">
             <div class="content-wrap">
                 <h2 class="content-title">Get stronger everyday.</h2>
-                <p> No matter what we do in my life, I feel being human we should always keep learning and strive for success. Some people say, fitness is just to go to the gym and do weight training but that is not all about. It's all about taking care of our body and living a healthy life. It's a choice and decision of individuals how we want to live life.
+                <p> No matter what we do in our life, I feel being human we should always keep learning and strive for success. Some people say, fitness is just to go to the gym and do weight training but that is not all about. It's all about taking care of our body and living a healthy life. It's a choice and decision of individuals how we want to live life.
                 </p>
             </div>
         </section>
@@ -84,7 +84,7 @@
         <section id="section-d" class="grid">
             <div class="box">
                 <h2 class="content-title">Stay Motivated</h2>
-                <p>    I know it's tough to stay motivated all time. We have up and downs in life, we must admit that that's a reality but What I've learned in my life so far whether when it comes to training, programming or learning new things, never give up in life. Always keep learning and stay humble and take care of yourself.    </p>
+                <p>    I know it's tough to stay motivated all time. We have ups and downs in life, we must admit that that's a reality but What I've learned in my life so far whether when it comes to training, programming or learning new things, never give up in life. Always keep learning and stay humble and take care of yourself.    </p>
                 <p>So always stay motivated even when you are going through hard times. </p>
             </div>
 
@@ -98,7 +98,7 @@
     <!-- Footer -->
     <footer id="main-footer" class="grid">
         <div>Fitness and Nutrition</div>
-        <div>Project by Karma Drukpa <a href="https://www.npr.org/sections/fitness-nutrition/" target="_blank">Check here for more information</a></div>
+        <div>Project by Karma Drukpa <a href="https://www.health.com/nutrition"target="_blank">Check here for more information</a></div>
 
     </footer>
 </body>
