--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="bg-image"> </div>
         <div class="content-wrap">
             <h1> Fitness matters at any Age.</h1>
-            <p>There is no shortcut, it takes time to create better, stronger version of yourself.
+            <p>There is no shortcut, it takes time to create a better, stronger version of yourself.
                </p>
             <a href="#section-b" class="btn">Read More</a>
 
@@ -43,7 +43,7 @@
                         <img src="/images/active.jpg" alt="active-person-photo">
                         <div class="card-content">
                             <h3 class="card-title">Run and have fun</h3>
-                            <p>I like running. It's fun and it has great benefits for health. It improves our cardiovascular and keeps us healthy.</p>
+                            <p>I like running. It's fun and it has great benefits for health. It improves our cardiovascular system and keeps us healthy.</p>
                         </div>
                     </div>
                 </li>
@@ -53,7 +53,7 @@
                         <img src="/images/food1.jpeg" alt="endurance-photo">
                         <div class="card-content">
                             <h3 class="card-title">Nutrition</h3>
-                            <p>I think Nutrition is key whether to transform our body or to stay healthy. It plays a vital role in life and well being.                               </p>
+                            <p>I think Nutrition is key whether tranforming our body or staying healthy. It plays a vital role in life and well being.                               </p>
                         </div>
                     </div>
                 </li>
@@ -63,7 +63,7 @@
                         <img src="/images/barbell.jpg" alt="barbell-photo">
                         <div class="card-content">
                             <h3 class="card-title">Train Smart</h3>
-                            <p>I like weight training. it feels so good when we train intensely and sweat it out. Weight training has many benefits to health.
+                            <p>I like weight training. It feels good to train intensely and sweat it out. Weight training has many health benefits.
                             </p>
                         </div>
                     </div>
@@ -75,7 +75,7 @@
         <section id="section-c" class="grid">
             <div class="content-wrap">
                 <h2 class="content-title">Get stronger everyday.</h2>
-                <p> No matter what we do in our life, I feel being human we should always keep learning and strive for success. Some people say, fitness is just to go to the gym and do weight training but that is not all about. It's all about taking care of our body and living a healthy life. It's a choice and decision of individuals how we want to live life.
+                <p> No matter what we do in our life, I feel being human we should always keep learning and strive for success. Some people say, fitness is just to go to the gym and do weight training but that is not all it is about. It's all about taking care of our body and living a healthy life. It's a choice and decision of individuals how we want to live life.
                 </p>
             </div>
         </section>
@@ -84,13 +84,13 @@
         <section id="section-d" class="grid">
             <div class="box">
                 <h2 class="content-title">Stay Motivated</h2>
-                <p>    I know it's tough to stay motivated all time. We have ups and downs in life, we must admit that that's a reality but What I've learned in my life so far whether when it comes to training, programming or learning new things, never give up in life. Always keep learning and stay humble and take care of yourself.    </p>
+                <p>    I know it's tough to stay motivated all time. We have ups and downs in life, we must admit that that's a reality but what I've learned in my life so far whether when it comes to training, programming or learning new things, never give up in life. Always keep learning and stay humble and take care of yourself.    </p>
                 <p>So always stay motivated even when you are going through hard times. </p>
             </div>
 
             <div class="box">
                 <h2>Chase your goal</h2>
-                <p>It doesn't matter what goals you have in life, whether it is fitness, education or financial, go for it. Have that hunger, drive and passion. Work bit by bit. As there is good saying "Rome wasn't built in a day". </p>
+                <p>It doesn't matter what goals you have in life, whether it is fitness, education or financial, go for it. Have that hunger, drive, and passion. Work bit by bit. Remember: "Rome wasn't built in a day". </p>
             </div>
         </section>
     </main>
@@ -98,7 +98,7 @@
     <!-- Footer -->
     <footer id="main-footer" class="grid">
         <div>Fitness and Nutrition</div>
-        <div>Project by Karma Drukpa <a href="https://www.health.com/nutrition"target="_blank">Check here for more information</a></div>
+        <div>Project by Karma Drukpa <a href="https://www.myfooddata.com/"target="_blank">Check here for more information</a></div>
 
     </footer>
 </body>
