--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <!-- Footer -->
     <footer id="main-footer" class="grid">
         <div>Fitness and Nutrition</div>
-        <div>Project by Karma Drukpa <a href="https://www.myfooddata.com/"target="_blank">Check here for more information</a></div>
+        <div>Project by Karma Drukpa <a href="https://www.muscleandstrength.com/nutrition"target="_blank">Check here for more information</a></div>
 
     </footer>
 </body>
