--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <img src="/images/food1.jpeg" alt="endurance-photo">
                         <div class="card-content">
                             <h3 class="card-title">Nutrition</h3>
-                            <p>I think Nutrition is key whether tranforming our body or staying healthy. It plays a vital role in life and well being.                               </p>
+                            <p>I think Nutrition is key whether transforming our body or staying healthy. It plays a vital role in life and well being.                               </p>
                         </div>
                     </div>
                 </li>
